# shared_expense_manager

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre-push-lint.sh
.github/workflows/: build.yml  keep_alive.yml  release.yml
docs/: operations.md
docs/superpowers/plans/: 2026-06-03-personal-finance-balance-fix.md
migrations/: env.py
migrations/versions/: 20250318_add_last_wpp_chat.py  20250318_baseline_baseline.py  add_last_wpp_chat_20250318.py  add_member_auth_fields_20250128.py  add_parent_expense_id_20250128.py  baseline_baseline_20250318.py  c1bd079de122_add_notification_preference_to_member.py  m10_personal_groups_income.py  m11_recurring_income_start_month.py  m12_recurring_personal_expenses.py  m13_recurring_group_expenses.py  m14_add_currency.py  m3_add_chat_sessions_and_processed_messages.py  m4_reconcile_schema.py  m5_rename_compras_to_supermercado.py  m6_add_groups_schema.py  m7_migrate_to_default_group.py  m8_drop_old_monthly_shares_unique.py  m9_invitations_and_stubs.py
reports/: xunit.xml
scripts/: test_image_parser.py
src/template/: asgi.py  dependencies.py  main.py  router.py
src/template/adapters/: database.py  orm.py  repositories.py
src/template/domain/: schema_model.py  schemas.py
src/template/entrypoint/: auth.py  category.py  currency.py  expense.py  group.py  invitation.py  member.py  monitor.py  monthly_share.py  personal.py  recurring_expense.py  whatsapp_bot.py
src/template/service_layer/: auth_service.py  currency_service.py  expense_service.py  group_service.py  image_expense_parser.py  initialization.py  invitation_service.py  member_service.py  notification_service.py  personal_ledger_service.py  quick_expense_parser.py  recurring_group_expense_service.py  whatsapp_client.py  whatsapp_invite_client.py  whatsapp_service.py
src/template/settings/: api_settings.py  bootstrap_settings.py  database_settings.py  uvicorn_settings.py
tests/: conftest.py
tests/e2e/entrypoint/: test_monitor.py
tests/fakes/: fake_whatsapp_client.py
tests/integration/: conftest.py
tests/integration/auth/: test_auth.py
tests/integration/expense/: test_expense_router.py  test_recurring_group_expense_router.py
tests/integration/groups/: test_group_router.py  test_invitations.py  test_personal_router.py
tests/integration/whatsapp/: test_chatbot_idempotency.py  test_chatbot_state_machine.py
tests/unit/: test_whatsapp_bot_stub_claim.py
tests/unit/adapters/: test_db_connection.py  test_group_repository.py  test_recurring_group_expense_repository.py
(+38 files in other folders)
