[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Author: Francisco Maver", "Email: fmaver@frba.utn.edu.ar"]
readme = "README.md"
packages = [{ include = "template", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic-settings = "^2.1.0"
pydantic = { extras = ["email"], version = "^2.5.3" }
python-dateutil = "^2.9.0.post0"
types-python-dateutil = "^2.9.0.20241003"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
fpdf = "^1.7.2"
types-requests = "^2.31.0.20240125"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.7"
alembic = "^1.13.1"
bcrypt = "^4.1.2"
httpx = "0.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = { extras = ["toml"], version = "^7.4.0" }
pre-commit = "^3.6.0"
black = "^24.1.1"
pylint = "^3.0.3"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.coverage.run]
branch = true
omit = ['tests/*', 'src/template/asgi.py', 'src/**/__init__.py']

[tool.coverage.report]
show_missing = true
ignore_errors = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:", "if __name__ == .__main__.:"]

[tool.isort]
known_first_party = "template"
line_length = 120
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
force_grid_wrap = 0

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.basic]
max-line-length = 120
argument-rgx = "[a-z_][a-z0-9_]{0,30}$"
function-rgx = "[a-z_][a-z0-9_]*$"
variable-rgx = "[a-z_][a-z0-9_]{0,30}$"
good-names = ["logger", "i", "j", "k", "ex", "Run", "T"]
bad-names = ["l", "I", "O"]
ignore-patterns = "test_.*?py"

[tool.pylint.logging]
logging-modules = "logging"

[tool.pylint.messages_control]
disable = [
    "fixme",
    "no-member",
    "unused-argument",
    "too-few-public-methods",
    "duplicate-code",
    "no-name-in-module",
    "no-self-argument",
    "missing-class-docstring",
]

[tool.pylint.reports]
reports = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"
python_files = "test_*.py"
junit_family = "xunit1"
log_cli = false
log_level = "DEBUG"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.utils",
    "ignore::PendingDeprecationWarning:starlette.formparsers",
]